--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Document</title>
   </head>
   <body>
-    <header><a href="/"></a></header>
+    <!-- Header -->
+    <header>
+      <!-- Logo -->
+      <img src="./images/Logo.jpg" alt="WEBSTUDIO" width: 115px; height: 24px;/>
+      <!--Navigation bar-->
+      <nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <!--Contacts-->
+      <div>
+        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </div>
+    </header>
   </body>
 </html>
