--- a/index.html
+++ b/index.html
@@ -24,5 +24,78 @@
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       </div>
     </header>
+    <main>
+      <!--Button-->
+      <section>
+        <h2>Effective Solutions for Your Business</h2>
+        <button>Order Service</button>
+      </section>
+      <!--Section 2-->
+      <section>
+        <div>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </div>
+        <div>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </div>
+        <div>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands with the strongest digital growth
+            opportunities and minimize risk.
+          </p>
+        </div>
+        <div>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </div>
+      </section>
+      <!--Our Team-->
+      <section>
+        <h2>Our Team</h2>
+        <div>
+          <img src="./images/img-3.jpg" alt="Mark Guerrero" width: 264px;
+          height: 380px;/>
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </div>
+        <div>
+          <img src="./images/img-2.jpg" alt="Tom Ford" width: 264px; height:
+          380px;/>
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </div>
+        <div>
+          <img src="./images/img-1.jpg" alt="Camila Garcia" width: 264px;
+          height: 380px; />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </div>
+        <div>
+          <img src="./images/img.jpg" alt="Daniel Wilson" width: 264px; height:
+          380px; />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <img src="./images/Logo.jpg" alt="WEBSTUDIO" width: 115px; height: 24px;>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
