--- a/index.html
+++ b/index.html
@@ -32,62 +32,79 @@
       </section>
       <!--Section 2-->
       <section>
-        <div>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </div>
-        <div>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </div>
-        <div>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands with the strongest digital growth
-            opportunities and minimize risk.
-          </p>
-        </div>
-        <div>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </div>
+        <ul>
+          <li>
+            <div>
+              <h3>Strategy</h3>
+                <p>
+                  Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>Diligence</h3>
+              <p>
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </div>
+          </li>
+          <li>
+              <div>
+               <h3>Technologies</h3>
+                <p>
+                  Design practice focused on digital experiences. We bring forth a
+                  deep passion for problem-solving.
+                </p>
+            </div>
+          </li> 
+        </ul>
       </section>
       <!--Our Team-->
       <section>
         <h2>Our Team</h2>
+        <ul>
+          <li>
         <div>
           <img src="./images/img-3.jpg" alt="Mark Guerrero" width: 264px;
           height: 380px;/>
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </div>
+        </li>
+        <li></li>
         <div>
           <img src="./images/img-2.jpg" alt="Tom Ford" width: 264px; height:
           380px;/>
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </div>
+        </li>
         <div>
           <img src="./images/img-1.jpg" alt="Camila Garcia" width: 264px;
           height: 380px; />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </div>
+        <li>
         <div>
           <img src="./images/img.jpg" alt="Daniel Wilson" width: 264px; height:
           380px; />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </div>
+        </li>
+        </ul>
       </section>
     </main>
     <footer>
