--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
           <li>
             <div>
               <h3>Strategy</h3>
-                <p>
-                  Our goal is to identify the business problem to walk away with the perfect and creative solution.
-                </p>
+              <p>
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
             </div>
           </li>
           <li>
@@ -60,14 +61,14 @@
             </div>
           </li>
           <li>
-              <div>
-               <h3>Technologies</h3>
-                <p>
-                  Design practice focused on digital experiences. We bring forth a
-                  deep passion for problem-solving.
-                </p>
+            <div>
+              <h3>Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
             </div>
-          </li> 
+          </li>
         </ul>
       </section>
       <!--Our Team-->
@@ -75,35 +76,37 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-        <div>
-          <img src="./images/img-3.jpg" alt="Mark Guerrero" width: 264px;
-          height: 380px;/>
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </div>
-        </li>
-        <li></li>
-        <div>
-          <img src="./images/img-2.jpg" alt="Tom Ford" width: 264px; height:
-          380px;/>
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </div>
-        </li>
-        <div>
-          <img src="./images/img-1.jpg" alt="Camila Garcia" width: 264px;
-          height: 380px; />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </div>
-        <li>
-        <div>
-          <img src="./images/img.jpg" alt="Daniel Wilson" width: 264px; height:
-          380px; />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </div>
-        </li>
+            <div>
+              <img src="./images/img-3.jpg" alt="Mark Guerrero" width: 264px;
+              height: 380px;/>
+              <h3>Mark Guerrero</h3>
+              <p>Product Designer</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="./images/img-2.jpg" alt="Tom Ford" width: 264px; height:
+              380px;/>
+              <h3>Tom Ford</h3>
+              <p>Frontend Developer</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="./images/img-1.jpg" alt="Camila Garcia" width: 264px;
+              height: 380px; />
+              <h3>Camila Garcia</h3>
+              <p>Marketing</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="./images/img.jpg" alt="Daniel Wilson" width: 264px;
+              height: 380px; />
+              <h3>Daniel Wilson</h3>
+              <p>UI Designer</p>
+            </div>
+          </li>
         </ul>
       </section>
     </main>
