--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Header -->
     <header>
       <!-- Logo -->
-      <img src="./images/Logo.jpg" alt="WEBSTUDIO" width: 115px; height: 24px;/>
+      <img src="./images/Logo.jpg" alt="WEBSTUDIO" width="115" height="24" />
       <!--Navigation bar-->
       <nav>
         <ul>
@@ -77,32 +77,48 @@
         <ul>
           <li>
             <div>
-              <img src="./images/img-3.jpg" alt="Mark Guerrero" width: 264px;
-              height: 380px;/>
+              <img
+                src="./images/img-3.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="380"
+              />
               <h3>Mark Guerrero</h3>
               <p>Product Designer</p>
             </div>
           </li>
           <li>
             <div>
-              <img src="./images/img-2.jpg" alt="Tom Ford" width: 264px; height:
-              380px;/>
+              <img
+                src="./images/img-2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="380"
+              />
               <h3>Tom Ford</h3>
               <p>Frontend Developer</p>
             </div>
           </li>
           <li>
             <div>
-              <img src="./images/img-1.jpg" alt="Camila Garcia" width: 264px;
-              height: 380px; />
+              <img
+                src="./images/img-1.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="380"
+              />
               <h3>Camila Garcia</h3>
               <p>Marketing</p>
             </div>
           </li>
           <li>
             <div>
-              <img src="./images/img.jpg" alt="Daniel Wilson" width: 264px;
-              height: 380px; />
+              <img
+                src="./images/img.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="380"
+              />
               <h3>Daniel Wilson</h3>
               <p>UI Designer</p>
             </div>
@@ -111,7 +127,7 @@
       </section>
     </main>
     <footer>
-      <img src="./images/Logo.jpg" alt="WEBSTUDIO" width: 115px; height: 24px;>
+      <img src="./images/Logo.jpg" alt="WEBSTUDIO" width="115" height="24" />
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
