--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Header -->
     <header>
       <!-- Logo -->
-      <img src="./images/Logo.jpg" alt="WEBSTUDIO" width="115" height="24" />
+      <a href="./index.html">WEBSTUDIO</a>
       <!--Navigation bar-->
       <nav>
         <ul>
@@ -19,18 +19,21 @@
         </ul>
       </nav>
       <!--Contacts-->
-      <div>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </div>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <!--Button-->
       <section>
-        <h2>Effective Solutions for Your Business</h2>
-        <button>Order Service</button>
+        <h1>Effective Solutions for Your Business <br /></h1>
+        <button type="button">Order Service</button>
       </section>
       <!--Section 2-->
+      <h2>Features</h2>
       <section>
         <ul>
           <li>
