--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Header -->
     <header>
       <!-- Logo -->
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <!--Navigation bar-->
       <nav>
         <ul>
