--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!-- Header -->
     <header>
       <!-- Logo -->
-      <a href="./index.html">WebStudio</a>
-      <!--Navigation bar-->
       <nav>
+        <a href="./index.html">WebStudio</a>
+        <!--Navigation bar-->
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -29,48 +29,40 @@
     <main>
       <!--Button-->
       <section>
-        <h1>Effective Solutions for Your Business <br /></h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!--Section 2-->
-      <h2>Features</h2>
       <section>
+        <h2>Features</h2>
         <ul>
           <li>
-            <div>
-              <h3>Strategy</h3>
-              <p>
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </div>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
           <li>
-            <div>
-              <h3>Punctuality</h3>
-              <p>
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </div>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
           <li>
-            <div>
-              <h3>Diligence</h3>
-              <p>
-                Research and confirm brands with the strongest digital growth
-                opportunities and minimize risk.
-              </p>
-            </div>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
           </li>
           <li>
-            <div>
-              <h3>Technologies</h3>
-              <p>
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </div>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
@@ -83,8 +75,8 @@
               <img
                 src="./images/img-3.jpg"
                 alt="Mark Guerrero"
-                width="264"
-                height="380"
+                width="264px"
+                height="380px"
               />
               <h3>Mark Guerrero</h3>
               <p>Product Designer</p>
@@ -95,8 +87,8 @@
               <img
                 src="./images/img-2.jpg"
                 alt="Tom Ford"
-                width="264"
-                height="380"
+                width="264px"
+                height="380px"
               />
               <h3>Tom Ford</h3>
               <p>Frontend Developer</p>
@@ -107,8 +99,8 @@
               <img
                 src="./images/img-1.jpg"
                 alt="Camila Garcia"
-                width="264"
-                height="380"
+                width="264px"
+                height="380px"
               />
               <h3>Camila Garcia</h3>
               <p>Marketing</p>
@@ -119,8 +111,8 @@
               <img
                 src="./images/img.jpg"
                 alt="Daniel Wilson"
-                width="264"
-                height="380"
+                width="264px"
+                height="380px"
               />
               <h3>Daniel Wilson</h3>
               <p>UI Designer</p>
@@ -130,7 +122,7 @@
       </section>
     </main>
     <footer>
-      <img src="./images/Logo.jpg" alt="WEBSTUDIO" width="115" height="24" />
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
