--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
               <img
                 src="./images/img-3.jpg"
                 alt="Mark Guerrero"
-                width="264px"
-                height="380px"
+                width="264"
+                height="380"
               />
               <h3>Mark Guerrero</h3>
               <p>Product Designer</p>
@@ -87,8 +87,8 @@
               <img
                 src="./images/img-2.jpg"
                 alt="Tom Ford"
-                width="264px"
-                height="380px"
+                width="264"
+                height="380"
               />
               <h3>Tom Ford</h3>
               <p>Frontend Developer</p>
@@ -99,8 +99,8 @@
               <img
                 src="./images/img-1.jpg"
                 alt="Camila Garcia"
-                width="264px"
-                height="380px"
+                width="264"
+                height="380"
               />
               <h3>Camila Garcia</h3>
               <p>Marketing</p>
@@ -111,8 +111,8 @@
               <img
                 src="./images/img.jpg"
                 alt="Daniel Wilson"
-                width="264px"
-                height="380px"
+                width="264"
+                height="380"
               />
               <h3>Daniel Wilson</h3>
               <p>UI Designer</p>
